# teleparser

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  analyze_blocks.py  basic.ipynb  compile.sh  compile_rhel9.sh  compile_rhel9_docker.sh  ericsson_voz.sql  postgres-compose.yml  pyproject.toml  run.sh  volte_benchmark_results.json
benchmarks/: ber_optimization_benchmark.py  volte_optimization_benchmark.py
docs/: BER_DECODER_OPTIMIZATION.md  MAX_COUNT_FEATURE.md  OPTIMIZATION_SUMMARY.md  OPTIONAL_OUTPUT_PATH.md  QUICK_START_OPTIMIZED.md  SCHEMA_README.md
examples/: duckdb_example.py
nbs/: basic.ipynb  eda.ipynb  ericsson.ipynb  symlink.ipynb
rust_bindings/: Cargo.toml
scripts/: claro_volte.py  claro_voz.py  compile.sh  ericsson_voz.sql  run_claro_voz.sh  run_ericsson_voz.sh  tim_voz.py  vivo_voz.py
src/: lib.rs
src/teleparser/: __init__.py  buffer.py  cli.py  config.py  entrypoint.py  file_handling.py  injection.py  main.py  prestadoras.py
src/teleparser/asn1/: ericsson.asn  ericsson.py
src/teleparser/decoders/: ber.py  sbc.py
src/teleparser/decoders/ericsson/: __init__.py  ber.py  ber_optimized.py  ber_two_phase.py  decoder.py  decorators.py  fieldnames.py  modules.py  parameters.py  parser.py  primitives.py  voz.py  (+7 more)
src/teleparser/encoding/: ber.py
src/teleparser/ericsson/: modules.py  parser.py
src/teleparser/parsers/: ericsson.py
src/teleparser/schema/: ericsson.asn  ericsson.py
tests/: test_ber_optimized.py  test_ber_optimized_simple.py  test_ber_two_phase.py  test_ericson_primitives.py  test_file_handling.py  test_parser.py
tests/legacy/: LeituraCDRsBrutosstir.py  cdrEricssonVozOrdenaAglutina.py  cdrVozEricsson.py  dividearq.py
(+25 files in other folders)
