[project]
name = "teleparser"
version = "0.2.0"
description = "A tool to parse CDR files from Brazilian Mobile operators."
readme = "README.md"
authors = [
    { name = "Ronaldo S.A. Batista", email = "ronaldokun@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3.0",
    "tqdm>=4.67.1",
]

[project.scripts]
teleparser = "teleparser.main:cli"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "nuitka>=2.6.9",
]

