[project]
name = "teleparser"
version = "0.2.0"
description = "A tool to parse CDR files from Brazilian Mobile operators."
readme = "README.md"
authors = [
    { name = "Ronaldo S.A. Batista", email = "ronaldokun@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "tqdm>=4.67.1",
]

[project.scripts]
teleparser = "teleparser.main:cli"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

