[project]
name = "teleparser"
version = "0.3.0"
description = "A tool to parse CDR files from Brazilian Mobile operators."
readme = "README.md"
authors = [
    { name = "Ronaldo S.A. Batista", email = "ronaldokun@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "tqdm>=4.67.1",
]

[project.scripts]
teleparser = "teleparser.main:cli"

[project.optional-dependencies]
parquet = [
    "pandas>=2.3.3",
    "pyarrow>=21.0.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
